layout bug-fix, high-res support

--- a/style.css
+++ b/style.css
@@ -31,19 +31,21 @@
   /*-----------------------------------------*/ 
 /*TYPOGRAPHY*/
 /*typefaces:*/
+--font-size-body: 16px;
 --typeface-heading: "Open Sans", sans-serif;
 --typeface-body: "Open Sans", sans-serif;
 --typeface-number: "Oswald", sans-serif;
---font-size-body: 1rem;
+
+font-size: var(--font-size-body);
 
   
  /*weight from 300 to 800*/
 --font-weight-key: 300;
 --module_ratio: 1.33; /*proportions ratio*/
   /*font sizes*/
-  --font-size-small:  max(calc(var(--font-size-body) / var(--module_ratio)), 12px);
+  --font-size-small:  max(calc(var(--font-size-body) / var(--module_ratio)), 0.85rem);
   --font-size-h6: calc(var(--font-size-body));
-  --font-size-h5: calc(var(--font-size-h6) * var(--module_ratio));
+  --font-size-h5: calc(var(--font-size-h6) * var(--module_ratio)*);
   --font-size-h4: calc(var(--font-size-h5) * var(--module_ratio));
   --font-size-h3: calc(var(--font-size-h4) * var(--module_ratio));
   --font-size-h2: calc(var(--font-size-h3) * var(--module_ratio));
@@ -504,7 +506,7 @@ a{
   /*font-weight: var(--font-weight-h2);*/
   padding-left:1.5rem;
   background-color: var(--color_primary);
-  box-shadow:inset 0 0 1rem 0 rgba(0,0,0,0.33);
+  /*box-shadow:inset 0 0 1rem 0 rgba(0,0,0,0.33);*/
   z-index:0;
 }
 #mainInput__label{
@@ -524,7 +526,7 @@ outline-offset: -1rem ;
 .button_copy{
     width:1rem;
     height:1rem;
-    padding:0.5rem;
+    
     grid-column: 2/ span 1;
   grid-row: 2/ span 1;
   z-index:10;
@@ -806,10 +808,13 @@ input[type="radio"] {
 
 .palette_brand{
   width:100%;
-  height:25vh;
+  min-height:25vh;
+  height:100%;
   display: flex;
   flex-flow:row wrap;
   list-style:none;
+  padding:0;
+  margin:0;
   
 }
 .palette_brand li:nth-child(1) {
@@ -840,11 +845,10 @@ input[type="radio"] {
 
 .palette{
   width:100%;
-  height:auto;
   display:flex;
   flex-wrap: wrap;
   justify-content:start;
-  align-content: start;
+  /*align-content: start;*/
   list-style:none;
   border-radius:1rem;
   overflow:hidden;
@@ -858,20 +862,19 @@ input[type="radio"] {
   align-items:flex-end;
  */
   display:grid;
-  grid-template-rows:auto 2rem;
-  grid-template-columns:auto 1.75rem;
+  grid-template-rows: auto 2rem;
+  grid-template-columns: auto 2rem;
   cursor:pointer;
   min-width: 5rem;
   min-height:12rem;
-  height:100%;
   flex:1;
   font-family: var(--typeface-number);
   font-size:var(--font-size-body);
   font-weight: 300;
-  text-align:right;
+  text-align:center;
   grid-auto-flow: row;
   place-items:end;
-  padding-bottom:0.25rem;
+  gap:0.25rem;
   z-index:0;
   
 }
@@ -888,22 +891,20 @@ input[type="radio"] {
  opacity:0.66;
  vertical-align:center;
   font-size: var(--font-size-small);
-  text-align:bottom;
-  
-  margin-right:0;
-  margin-bottom:0.15rem;
-  
+  align-self:flex-start;
 }
 .icon_copy{
-  grid-row:2 /span 1;
-  grid-column:2 /span 1;
-  width:0.85rem;
-  height:0.85rem;
-  margin:auto;
+  grid-row:2 / span 1;
+  grid-column:2 / span 1;
+  width:1rem;
+  height:1rem;
   
-  margin-left:0.25rem;
-  opacity:0.66;
+  margin: auto;
+  margin-top:0;
+  margin-left:0;
+  opacity:0.8;
   
+  align-self:flex-start;
 }
 /*palettes spreading*/
 .palette--primary li:nth-child(1) {
@@ -1103,12 +1104,12 @@ input[type="radio"] {
   cursor: pointer;
   top: 0;
   left: 0;
-  right: -0.95rem;
+  right: -1rem;
   bottom: 0;
   background-color: transparent;
   -webkit-transition: .4s;
   transition: .4s;
-  transform:scale(0.75);
+  transform:1;
 }
 
 .slider:before {
@@ -1158,7 +1159,7 @@ input:checked + .slider:before {
 .toggle_comp{
   display:flex;
   flex-direction:row;
-  gap:1rem;
+  gap:1.5rem;
   align-items:center;
 }
 
@@ -1219,7 +1220,7 @@ input:checked + .slider:before {
   .palette_brand{
     /*flex-direction:column;*/
     height:50vmin;
-    padding-bottom:0.25rem;
+    
     display:flex;
     
   }
@@ -1263,6 +1264,14 @@ input:checked + .slider:before {
   
  
 }
+
+.colorTicker{
+  position:relative;
+  grid-template-rows: auto 2rem;
+  grid-template-columns: auto 1.5rem;
+
+  
+}
 /*
 .mainInput__arrow{
   width:1rem;
@@ -1275,22 +1284,22 @@ input:checked + .slider:before {
   grid-column:2 / span 1;
 }
   */
- .ctrl_hues{
-    display:grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 1rem 2rem;
+ #ctrl_hues{
+    
     gap:0.5rem;
+    align-items:flex-start;
   }
   .wrapper_color_picker{
     margin:0;
     padding:0;
     grid-column: 1 /2;
     grid-row: 1/ 3;
+    flex-direction:column-reverse;
     display:flex;
     gap:1rem;
-    align-items:flex-start;
+    align-items:center;
     justify-content:flex-start;
-    flex-direction:column-reverse;
+    
    
     
     
@@ -1305,12 +1314,17 @@ input:checked + .slider:before {
   align-self:flex-start;
   
 }
-
+input[type="color"]{
+  width: 1.8rem;
+  height:1.8rem;
+  padding-bottom:0;
+}
   .wrapper_segCtrl{
     grid-column: 2 /3;
     grid-row: 1/ 3; 
     flex-direction:column;
     align-items:flex-end;
+    
     gap:1rem;
     margin:0;
     padding:0;
@@ -1349,4 +1363,27 @@ input[type="range"]::-moz-slider-thumb{
   align-items:center;
 }
   
+}
+
+
+
+@media only screen and (min-width: 1920px) {
+  *{
+  font-size: 24px;
+  }
+ 
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 0.95rem;
+    width: 0.95rem;
+    left: 0.25rem;
+    bottom: 0.22rem;
+   
+  }
+}
+@media only screen and (min-width: 2560px) {
+  *{
+  font-size: 28px;
+  }
 }
